RESOLVED FIXED36905
Crash submitting display:none textarea in a form
https://bugs.webkit.org/show_bug.cgi?id=36905
Summary Crash submitting display:none textarea in a form
Geoffrey Garen
Reported 2010-03-31 16:05:55 PDT
Crash submitting display:none textarea in a form
Attachments
patch (4.28 KB, patch)
2010-03-31 16:16 PDT, Geoffrey Garen
darin: review+
Geoffrey Garen
Comment 1 2010-03-31 16:16:30 PDT
Geoffrey Garen
Comment 2 2010-03-31 16:30:25 PDT
I wonder: Is updateLayout() the right call here, or would just updateStyleIfNeeded() be sufficient?
Geoffrey Garen
Comment 3 2010-03-31 19:08:54 PDT
Committed revision 56885.
Note You need to log in before you can comment on or make changes to this bug.