Crash submitting display:none textarea in a form https://bugs.webkit.org/show_bug.cgi?id=36905

Reviewed by Darin Adler.

WebCore:

Test: fast/forms/textarea-submit-crash.html

* html/HTMLTextAreaElement.cpp:
(WebCore::HTMLTextAreaElement::appendFormData): Do update layout before
asking our renderer for its text, since we can't rely on our renderer's
text if layout is needed.

* rendering/RenderTextControl.cpp:
(WebCore::RenderTextControl::textWithHardLineBreaks): Don't update layout
while being asked for our text, since doing so may delete us, causing a crash.

LayoutTests:

* fast/forms/textarea-submit-crash-expected.txt: Added.
* fast/forms/textarea-submit-crash.html: Added.



Canonical link: https://commits.webkit.org/48178@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56885 268f45cc-cd09-0410-ab3c-d52691b4dbfc